# sentinelboard

./: .gitignore  .pre-commit-config.yaml  README.md  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  drift.py  main.py  model.py  monitoring.py  websocket.py
backend/tests/: test_api.py  test_drift.py  test_drift_edge_cases.py  test_integration.py  test_model.py  test_websocket.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertPanel.tsx  DriftChart.tsx  LatencyGauge.tsx  ModelHealth.tsx  PredictionFeed.tsx  StatsSummary.tsx
frontend/src/hooks/: useWebSocket.ts
infra/: docker-compose.yml  prometheus.yml
scripts/: inject_drift.py  simulate_traffic.py
